--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --blur: blur(5px);
     --pxbtn: 1.2rem;
     --ff: #fff; /* color font*/
-    --inputc: #000;
+    --inputc: #fff;
     --btn: #fff;
     --btnRadius: 8px; 
     --btn-height: 40px;
