--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --bg: #0d1117;
     --A:  #171b22 ;
     --B:  #30363d ;
-    --bgurl: url(genshin.jpeg);
+    --bgurl: url(img_1.webp);
     --zh-cn: 'zh-cn';
     --blur: blur(5px);
     --pxbtn: 1.2rem;
