--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     --bg: #0d1117;
     --A: #171b22;
     --B: #30363d9f;
-    --bgurl: url(genshin.jpeg);
+    --bgurl: url(../background/load27.jpeg);
     --zh-cn: 'zh-cn';
-    --blur: blur(5px);
+    --blur: blur(1px);
     --pxbtn: 1.2rem;
     --ff: #fff;
     --inputc: #000; /* Warna latar input putih */
@@ -16,15 +16,13 @@
 }
 @font-face {
     font-family: 'zh-cn';
-    src: url(zh-cn.ttf);
+    src: url(../zh-cn.ttf);
 }
-
 body {
     font-family: 'zh-cn';
     height: 100vh;
     color: var(--ff);
 }
-
 .background {
     position: fixed;
     top: 0;
@@ -36,14 +34,13 @@ body {
     background-size: cover;
     z-index: -1;
 }
-
 header {
     position: relative;
     z-index: 1;
     background: none;
     color: var(--ff);
     font-size: 30px;
-    backdrop-filter: var(--blur);
+    /* backdrop-filter: var(--blur); */
     text-align: center;
     padding: 10px;
     nav {
@@ -66,7 +63,6 @@ main {
     box-shadow: 0 0 10px #000;
     backdrop-filter: var(--blur);
 }
-
 .content {
     padding: 0 10px 0 0;
     display: grid;
@@ -80,6 +76,8 @@ input {
     margin: 5px;
     height: 20px;
     border: 2px solid var(--inputc);
+    box-shadow: 0 3px 0 var(--A);
+    font-family: 'zh-cn';
     border-radius: 8px;
     padding: 5px;
     outline: none;
@@ -102,15 +100,30 @@ input {
     width: 100%;
     height: var(--btn-height);
     padding: 5px;
-    margin: 5px;
+    margin: 2.5px;
     border: none;
     outline: none;
     border-radius: var(--btnRadius);
+    box-shadow: 0 4px 0 var(--inputc);
     cursor: pointer;
     font-size: var(--pxbtn);
     font-family: var(--zh-cn);
-}
 
+    &:active {
+        box-shadow: none;
+        transform: translateY(4px);
+    }
+}
+#calculator{
+    &:hover{
+        background: #238636;
+    }
+    &:active {
+        background: #0d731e ;
+        box-shadow: none;
+        transform: translateY(3px);
+    }
+}
 #Reset {
     background-color: #e12d39;
     &:hover{
@@ -121,7 +134,6 @@ input {
         transform: translateY(2px);
     }
 }
-
 #copy {
     background-color: #0a84ff;
     &:hover{
@@ -132,7 +144,6 @@ input {
         transform: translateY(2px);
     }
 }
-
 #download {
     background-color: #189a2e;
     &:hover{
@@ -143,26 +154,18 @@ input {
         transform: translateY(2px);
     }
 }
-
 textarea {
+    font-family: 'zh-cn';
     width: 100%;
     height: 300px;
+    padding: 3px;
     outline: none;
     background: none;
     margin: 5px 0;
     color: var(--ff);
     border-radius: 10px;
-    border: 3px solid #30363d;
-}
-
-@media (max-width: 768px) {
-    .main {
-        display: grid;
-    }
-
-    textarea {
-        height: 270px;
-    }
+    font-size: 13.5px;
+    border: 3px solid var(--A);
 }
 footer {
     width: 100%;
@@ -179,5 +182,14 @@ footer {
     a :hover{
         text-shadow: 0 0 10px #fff,
                      0 0 20px #fff;
+    }
+}
+
+@media (max-width: 700px) {
+    .main {
+        display: grid;
+    }
+    textarea {
+        height: 275px;
     }
 }
