--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --bg: #0d1117;
     --A: #171b22;
     --B: #30363d9f;
-    --bgurl: url(../background/load27.jpeg);
+    --bgurl: url(genshin-night);
     --zh-cn: 'zh-cn';
     --blur: blur(1px);
     --pxbtn: 1.2rem;
@@ -16,7 +16,7 @@
 }
 @font-face {
     font-family: 'zh-cn';
-    src: url(../zh-cn.ttf);
+    src: url(zh-cn.ttf);
 }
 body {
     font-family: 'zh-cn';
