--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --bg: #0d1117;
     --A: #171b22;
     --B: #30363d9f;
-    --bgurl: url(genshin-night);
+    --bgurl: url(genshin-night.jpeg);
     --zh-cn: 'zh-cn';
     --blur: blur(1px);
     --pxbtn: 1.2rem;
